--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   }, 
   "ConnectionStrings":{
-    "DefaultConnection": "Data source=skinets.db"
+    "DefaultConnection": "Data source=skinets.db",
+    "Redis": "localhost"
   },
   "ApiUrl": "https://localhost:5002/"
 }
