End of Section 23

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -15,5 +15,5 @@
     "Key": "super secret key",
     "Issuer": "https://localhost:5002"
   },
-  "ApiUrl": "https://localhost:5002/"
+  "ApiUrl": "https://localhost:5002/Content/"
 }
